--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,23 @@ android {
 
 dependencies {
     implementation "androidx.appcompat:appcompat:$androidx_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+
+
     implementation "com.google.android.material:material:$material_version"
 
+    // Networking
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit2"
+
+    // Tools
+    implementation "com.jakewharton.timber:timber:$timber_version"
+
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.5.10'
+    testImplementation "com.squareup.retrofit2:retrofit-mock:$retrofit2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
