--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,14 @@ buildscript {
 //        fragment_version = '1.2.5'
 //        prefernce_version = '1.1.1'
 //        lifecycle_version = '2.2.0'
-//        coroutines_version = '1.3.9'
+        coroutines_version = '1.4.3'
 //        room_version = '2.2.5'
 
         timber_version = '4.7.1'
 
         material_version = '1.3.0'
 
-//        retrofit2 = '2.6.4' //'2.8.2' last version
+        retrofit2 = '2.6.4' //'2.9.0' last version
         kotlin_version = '1.4.31'
     }
     repositories {
